# Noir_Wallet

./: .gitignore  ACCOUNT_CREATION_FIX.md  HISTORY.md  LICENSE  QUICK-TEST-CHECKLIST.md  README.md  backend.md  backendtodo.md  gcp-setup.sh  pptx_dump.txt  render.yaml
asset/backend/: .env.example  .gitignore  Cargo.toml  Dockerfile
asset/backend/migrations/: 20260629000001_initial_schema.sql  20260630000001_phase_2g_idempotency_and_indexes.sql
asset/backend/src/: api.rs  channel_selector.rs  channels.rs  config.rs  db.rs  error.rs  errors.rs  fees.rs  handlers.rs  lib.rs  main.rs  metrics.rs  models.rs  queue.rs  state.rs  stellar.rs  sync.rs  workers.rs
asset/backend/src/workers/: channel_monitor.rs  confirmation_poller.rs  mod.rs  submission_processor.rs
backend/asset/: Cargo.toml  TSK-201-TESTING.md  docker-compose.yml
backend/asset/backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  test_e2e.sh
backend/asset/backend/examples/: pdax_balances.rs  pdax_crypto_deposit.rs  pdax_crypto_transactions.rs  pdax_crypto_withdraw.rs  pdax_fiat_deposit.rs  pdax_fiat_transactions.rs  pdax_fiat_withdraw.rs  pdax_firm_quote.rs  pdax_indicative_price.rs  pdax_login.rs  pdax_order_details.rs  pdax_orders.rs  pdax_place_order.rs  pdax_refresh_token.rs  pdax_user_info_upload.rs  run_migrations.rs
backend/asset/backend/examples/common/: pdax_env_cache.rs
backend/asset/backend/migrations/: 20260629000001_initial_schema.sql  20260708000001_merchants_users_notification_cache.sql  20260711000001_signed_envelope_xdr.sql  20260711000002_device_custody.sql  20260711000003_device_pin.sql
backend/asset/backend/postman/: PDAX-Staging.postman_environment.json
backend/asset/backend/src/: api.rs  auth.rs  cache.rs  channels.rs  config.rs  crypto.rs  db.rs  errors.rs  lib.rs  main.rs  metrics.rs  models.rs  pdax.rs  queue.rs  rate_limiter.rs  state.rs  stellar.rs  transaction_builder.rs  transaction_signer.rs  validation.rs
backend/asset/backend/src/workers/: channel_monitor.rs  mod.rs  (+4 more)
backend/asset/backend/tests/: integration.rs
backend/asset/contracts/agent_registry/: Cargo.toml
backend/asset/contracts/payment_escrow/: Cargo.toml
contracts/device_registry/: Cargo.toml
contracts/device_registry/.cargo/: config.toml
contracts/device_registry/src/: lib.rs
contracts/device_registry/test_snapshots/tests/: test_register_and_get_wallet_roundtrip.1.json  test_unauthorized_register_rejected.1.json
contracts/device_registry/tests/: integration.rs
(+258 files in other folders)
