[package]
name = "noir-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid", "chrono", "json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
anyhow = "1.0"
dotenv = "0.15"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
