[workspace]
members = [
    "contracts/device_registry",
    "contracts/agent_registry",
    "contracts/payment_escrow",
    "backend",
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
